# irs1318_apriltag_public

./: Building.txt  README.md  irs1318_apriltag.code-workspace  settings.gradle
managed/: .gitignore  build.gradle
managed/src/main/java/frc1318/: AssemblyLoader.java  IReleasable.java  ReleaseableBase.java
managed/src/main/java/frc1318/apriltag/: AprilTag.java  AprilTagDetection.java  AprilTagDetector.java  AprilTagFamily.java  AprilTagPose.java  Mat4.java
managed/src/main/java/frc1318/libcamera/: Camera.java  CameraManager.java  ImageFormat.java
managed/src/main/java/frc1318/opencv/: Mat4.java
managed/src/main/java/frc1318/ws2812/: Color.java  WS2812LedStrip.java
native/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
native/piolib/: CMakeLists.txt  README.md
native/piolib/include/hardware/: gpio.h
native/src/: AprilTag.cpp  AprilTagDetection.cpp  AprilTagDetector.cpp  Camera.cpp  CameraHolder.cpp  CameraHolder.hpp  CameraManager.cpp  Mat4.cpp  Mat4.h  Mat4.hpp  WS2812LedStrip.cpp  WS2812LedStrip.hpp  frc1318_apriltag_AprilTag.h  frc1318_apriltag_AprilTagDetection.h  frc1318_apriltag_AprilTagDetector.h  frc1318_apriltag_Mat4.h  frc1318_libcamera_Camera.h  frc1318_libcamera_CameraManager.h  frc1318_opencv_Mat4.h  frc1318_ws2812_WS2812LedStrip.h
